Update ongoing tasks, unit tests
